unpackaged/main/default/objects/API_Usage_Snapshot__c/API_Usage_Snapshot__c.object-meta.xml
<CustomObject>
    <label>API Usage Snapshot</label>
    <nameField>
        <label>API Usage Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Usage Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>