unpackaged/main/default/objects/API_Usage_Snapshot__c/fields/Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Week__c</fullName>
    <label>Day Of Week</label>
    <length>100</length>
    <type>Text</type>
</CustomField>