unpackaged/main/default/objects/API_Usage_Snapshot__c/fields/Snapshot_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Day_of_the_Week__c</fullName>
    <label>Snapshot Day of the Week</label>
    <length>100</length>
    <type>Text</type>
</CustomField>